Adjusted page for all type of device, fixed some spacing

--- a/css/general.css
+++ b/css/general.css
@@ -140,6 +140,13 @@ body {
   line-height: 1.5;
 }
 
+.under-heading-text {
+  font-size: 1.6rem;
+  max-width: 60ch;
+  margin: 0 auto;
+  margin-bottom: 8rem;
+}
+
 .btn-ios:link,
 .btn-ios:visited,
 .btn-mac:link,
@@ -152,8 +159,6 @@ body {
   margin-right: 1.2rem;
   padding: 1.4rem 3.2rem;
   border-radius: 100px;
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
-    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 
   transition: all 0.3s;
 }
@@ -161,13 +166,13 @@ body {
 .btn-ios:link,
 .btn-ios:visited {
   background-color: hsl(171, 66%, 44%);
-  box-shadow: 0px 3px 0 0 rgb(30, 147, 130);
+  box-shadow: 0px 3px 0 0 rgb(30, 147, 130), 0px 5px 15px hsl(171, 66%, 44%);
 }
 
 .btn-mac:link,
 .btn-mac:visited {
   background-color: hsl(233, 100%, 69%);
-  box-shadow: 0px 3px 0 0 rgb(67, 80, 182);
+  box-shadow: 0px 3px 0 0 rgb(67, 80, 182), 0px 5px 15px hsl(233, 100%, 69%);
 }
 
 .btn-ios:hover,
