--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 }
 
 .mac-img {
-  width: 90%;
+  width: 100%;
 }
 
 .advantages-text-box {
@@ -48,13 +48,6 @@
 
 .section-access {
   padding: 4.8rem 0 9.6rem 0;
-}
-
-.under-heading-text {
-  font-size: 1.6rem;
-  width: 60ch;
-  margin: 0 auto;
-  margin-bottom: 8rem;
 }
 
 .image-devices {
@@ -109,11 +102,6 @@
   align-items: center;
 }
 
-.logos img {
-  filter: brightness(0%);
-  opacity: 50%;
-}
-
 /***************************/
 /* DOWNLOAD SECTION */
 /**************************/
@@ -134,6 +122,7 @@
 .footer-container {
   max-width: 120rem;
   margin: 0 auto;
+  padding: 0 1.6rem;
 }
 
 .footer li {
@@ -141,6 +130,7 @@
 }
 
 .grid--footer {
+  display: grid;
   grid-template-columns: 1.5fr 1fr 1fr 1fr 1.5fr;
 }
 
